fixed heading spacing

--- a/my-app/client/src/App.css
+++ b/my-app/client/src/App.css
@@ -113,7 +113,7 @@ img {
   }
 
   p1 {
-    font-size: 100pt;
+    font-size: 50pt;
     font-weight: bolder;
     font-style: italic;
     /* color: rgb(39, 16, 5); */
@@ -126,6 +126,26 @@ img {
     
   }
   
+    p3 {
+    font-size: 50pt;
+    /* color: rgb(40, 18, 5); */
+    color: rgb(182, 68, 1);
+    font-weight: bolder;
+    /* color: rgb(240, 107, 12); */
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+sans-serif;
+    letter-spacing: 5pt;
+    /* z-index: 10; */
+    position: relative;
+  }
+
+  p4 {
+    /* margin: .3rem; */
+    color: rgb(37, 90, 250);
+    font-size: 20pt;
+  }
+
   
   h1 {
     /* text-decoration: underline; */
@@ -162,26 +182,6 @@ sans-serif;
     z-index: 10;
     position: relative;
   } */
-
-  p3 {
-    font-size: 95pt;
-    /* color: rgb(40, 18, 5); */
-    color: rgb(182, 68, 1);
-    font-weight: bolder;
-    /* color: rgb(240, 107, 12); */
-    font-style: italic;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-sans-serif;
-    letter-spacing: 5pt;
-    /* z-index: 10; */
-    position: relative;
-  }
-
-  p4 {
-    /* margin: .3rem; */
-    color: rgb(37, 90, 250);
-    font-size: 20pt;
-  }
 
 
   .editbutton {
@@ -394,7 +394,7 @@ cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   
   
   .stockDashboardContainer {
-    height: 60vh;
+    height: 80vh;
     width: 80vw;
 
     /* align-items: center; */
@@ -404,7 +404,7 @@ cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     background: rgba(0, 0, 0, 0);
     /* color: white;  */
     margin: auto;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     /* border-radius: 15px; */
     position: relative;
     z-index: 1;
@@ -424,6 +424,9 @@ cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
   flex-wrap: wrap;
   justify-content: center;
   align-items: stretch;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 /* .AddStock {
   text-align: center;
